cmake_minimum_required (VERSION 3.5.0 FATAL_ERROR)
project (ltjs_lib_client_shell VERSION 0.0.1 LANGUAGES CXX)

include (ltjs_common)

add_library (${PROJECT_NAME} STATIC)

ltjs_add_defaults (${PROJECT_NAME})

if (LTJS_USE_PCH AND NOT (${CMAKE_VERSION} VERSION_LESS "3.16.0"))
	target_precompile_headers(
		${PROJECT_NAME}
		PRIVATE
			[["stdafx.h"]]
	)
endif ()

target_compile_definitions (
	${PROJECT_NAME}
	PRIVATE
		_CLIENTBUILD
		MEMTRACK_CLIENT
)

if (MSVC)
	# Enable RTTI
	target_compile_options (
		${PROJECT_NAME}
		PRIVATE
			-GR
	)
endif ()

target_include_directories (
	${PROJECT_NAME}
	PRIVATE
		.
		../
		../../../engine/sdk/inc
		../../../libs/butemgr
		../../../libs/cryptmgr
		../../../libs/lith
		../../../libs/mfcstub
		../../../libs/regmgr
		../../../libs/stdlith
		../../clientres/shared
		../../libs/ltguimgr
		../../libs/serverdir
		../../shared
)

target_sources (
	${PROJECT_NAME}
	PRIVATE
		../../../engine/sdk/inc/iltbaseclass.h
		../../../engine/sdk/inc/lteulerangles.h
		../../../engine/sdk/inc/ltmodule.h
		../../shared/activatetypemgr.h
		../../shared/activationdata.h
		../../shared/clientservershared.h
		../../shared/crc32.h
		../../shared/impacttype.h
		../../shared/keymgr.h
		../../shared/missionbutemgr.h
		../../shared/profileutils.h
		../../shared/radartypemgr.h
		../../shared/saveloadmgr.h
		../../shared/scmdconsole.h
		../../shared/scmdshared.h
		../../shared/searchitemmgr.h
		../../shared/sharedmission.h
		../../shared/sharedscoring.h
		../../shared/teammgr.h
		../../shared/trackednodecontext.h
		../../shared/triggertypemgr.h
		../../shared/uberassert.h
		../../shared/wavefn.h
		../../shared/winutil.h
		activateobjectfx.h
		baselinesystemfx.h
		basemenu.h
		baseparticlesystemfx.h
		basepolydrawfx.h
		basescalefx.h
		basescreen.h
		beamfx.h
		bodyfx.h
		bullettrailfx.h
		camerafx.h
		cameraoffsetmgr.h
		chainedfx.h
		characterfx.h
		cheatmgr.h
		client_physics.h
		clientbutemgr.h
		clientfxdb.h
		clientfxmgr.h
		clientinfomgr.h
		clientmultiplayermgr.h
		clientsaveloadmgr.h
		clientsoundmgr.h
		clienttrackednodecontext.h
		clienttrackednodemgr.h
		clientutilities.h
		clientweapon.h
		clientweaponallocator.h
		clientweaponbase.h
		clientweaponmgr.h
		clientweaponnone.h
		clientweaponutils.h
		cmovemgr.h
		credits.h
		cursormgr.h
		damagefxmgr.h
		deathfx.h
		debrisfx.h
		debuglinefx.h
		doomsdaypiecefx.h
		dynamiclightfx.h
		explosionfx.h
		fastlist.h
		firefx.h
		flashlight.h
		fullscreentint.h
		gadgetdisabler.h
		gadgettargetfx.h
		gamebutes.h
		gameclientshell.h
		gamesettings.h
		gibfx.h
		globalclientmgr.h
		headbobmgr.h
		hitbox.h
		hudbar.h
		hudchatinput.h
		huddamage.h
		huddecision.h
		huddisplaymeter.h
		huddistance.h
		huditem.h
		hudmessage.h
		hudmessagequeue.h
		hudmeter.h
		hudmgr.h
		hudmissiontext.h
		hudpaused.h
		hudpopup.h
		hudradar.h
		hudscores.h
		hudsubtitles.h
		hudtransmission.h
		intelitemlist.h
		interfacemgr.h
		interfaceresmgr.h
		interfacesurfmgr.h
		interfacetimer.h
		ipmgr.h
		jumpvolumefx.h
		laserbeam.h
		lasertriggerfx.h
		layoutmgr.h
		leanmgr.h
		lensflarefx.h
		lightfx.h
		lightgroupfx.h
		lightningfx.h
		lightscalemgr.h
		linesystemfx.h
		loadingscreen.h
		marksfx.h
		menuenum.h
		menuintel.h
		menuinventory.h
		menukeys.h
		menumgr.h
		menumission.h
		menuplayer.h
		menusystem.h
		messagebox.h
		minefx.h
		missionmgr.h
		music.h
		muzzleflashfx.h
		muzzleflashparticlefx.h
		nodecontroller.h
		nodelinesfx.h
		objectivecontrol.h
		objspritefx.h
		overlays.h
		particleexplosionfx.h
		particleshowerfx.h
		particlesystemfx.h
		particletrailfx.h
		particletrailsegmentfx.h
		performanceenum.h
		performancemgr.h
		performancetest.h
		pickupitemfx.h
		plasma.h
		playercamera.h
		playerlurefx.h
		playermgr.h
		playersoundfx.h
		playerstats.h
		playervehiclefx.h
		playerviewattachmentmgr.h
		polydebrisfx.h
		polygridfx.h
		polylinefx.h
		popupmgr.h
		popuptext.h
		profilemgr.h
		projectilefx.h
		pvfxmgr.h
		radarobjectfx.h
		ragdoll.h
		ragdollconstraint.h
		ragdollnode.h
		randomsparksfx.h
		resource.h
		scatterfx.h
		scmdconsoledriver_cshell.h
		screencommands.h
		screenenum.h
		screenmgr.h
		screenpostload.h
		screenpreload.h
		screenspritemgr.h
		screentintmgr.h
		searcher.h
		searchlightfx.h
		sfxmgr.h
		shareddefs.h
		shellcasingfx.h
		skillcontrol.h
		smokefx.h
		snowfx.h
		soundfx.h
		sparam.h
		specialfx.h
		specialfxlist.h
		sprinklesfx.h
		stack.h
		stdafx.h
		steamfx.h
		systemdependant.h
		targetmgr.h
		texturefxmgr.h
		timedtext.h
		tracerfx.h
		triggerfx.h
		vartrack.h
		vehiclemgr.h
		visionmodemgr.h
		vkdefs.h
		volumebrushfx.h
		weaponchooser.h
		weaponfx.h
		weaponstringdefs.h
		weatherfx.h
)

target_sources (
	${PROJECT_NAME}
	PRIVATE
		../../../engine/sdk/inc/iltbaseclass.cpp
		../../../engine/sdk/inc/lteulerangles.cpp
		../../../engine/sdk/inc/ltmodule.cpp
		../../../engine/sdk/inc/ltobjref.cpp
		../../../engine/sdk/inc/ltquatbase.cpp
		../../shared/activatetypemgr.cpp
		../../shared/animator.cpp
		../../shared/assertmgr.cpp
		../../shared/attachbutemgr.cpp
		../../shared/butelistreader.cpp
		../../shared/clientservershared.cpp
		../../shared/commonutilities.cpp
		../../shared/crc32.cpp
		../../shared/damagetypes.cpp
		../../shared/debrismgr.cpp
		../../shared/debugline.cpp
		../../shared/debugnew.cpp
		../../shared/fxbutemgr.cpp
		../../shared/fxstructs.cpp
		../../shared/gamealloc.cpp
		../../shared/gamebutemgr.cpp
		../../shared/globalmgr.cpp
		../../shared/keymgr.cpp
		../../shared/missionbutemgr.cpp
		../../shared/modelbutemgr.cpp
		../../shared/netdefs.cpp
		../../shared/parsedmsg.cpp
		../../shared/profileutils.cpp
		../../shared/radartypemgr.cpp
		../../shared/saveloadmgr.cpp
		../../shared/scmdconsole.cpp
		../../shared/searchitemmgr.cpp
		../../shared/sharedfxstructs.cpp
		../../shared/sharedmission.cpp
		../../shared/sharedscoring.cpp
		../../shared/skillsbutemgr.cpp
		../../shared/soundbutemgr.cpp
		../../shared/soundfiltermgr.cpp
		../../shared/soundmgr.cpp
		../../shared/stacktrace.cpp
		../../shared/surfacefunctions.cpp
		../../shared/surfacemgr.cpp
		../../shared/teammgr.cpp
		../../shared/templatelist.cpp
		../../shared/trackednode.cpp
		../../shared/trackednodecontext.cpp
		../../shared/trackednodecontrolfn.cpp
		../../shared/trackednodemgr.cpp
		../../shared/triggertypemgr.cpp
		../../shared/uberassert.cpp
		../../shared/versionmgr.cpp
		../../shared/wavefn.cpp
		../../shared/weaponmgr.cpp
		../../shared/winutil.cpp
		activateobjectfx.cpp
		baselinesystemfx.cpp
		basemenu.cpp
		baseparticlesystemfx.cpp
		basepolydrawfx.cpp
		basescalefx.cpp
		basescreen.cpp
		beamfx.cpp
		bodyfx.cpp
		bullettrailfx.cpp
		cameraoffsetmgr.cpp
		chainedfx.cpp
		characterfx.cpp
		cheatmgr.cpp
		client_physics.cpp
		clientbutemgr.cpp
		clientfxdb.cpp
		clientfxmgr.cpp
		clientinfomgr.cpp
		clientmultiplayermgr.cpp
		clientsaveloadmgr.cpp
		clientsoundmgr.cpp
		clienttrackednodecontext.cpp
		clienttrackednodemgr.cpp
		clientutilities.cpp
		clientweapon.cpp
		clientweaponmgr.cpp
		clientweaponutils.cpp
		cmovemgr.cpp
		credits.cpp
		cursormgr.cpp
		damagefxmgr.cpp
		deathfx.cpp
		debrisfx.cpp
		debuglinefx.cpp
		doomsdaypiecefx.cpp
		dynamiclightfx.cpp
		dynamicoccludervolumefx.cpp
		explosionfx.cpp
		firefx.cpp
		flashlight.cpp
		fullscreentint.cpp
		gadgetdisabler.cpp
		gadgettargetfx.cpp
		gameclientshell.cpp
		gamesettings.cpp
		gibfx.cpp
		globalclientmgr.cpp
		headbobmgr.cpp
		hitbox.cpp
		hudbar.cpp
		hudchatinput.cpp
		huddamage.cpp
		huddecision.cpp
		huddisplaymeter.cpp
		huddistance.cpp
		hudmessage.cpp
		hudmessagequeue.cpp
		hudmeter.cpp
		hudmgr.cpp
		hudmissiontext.cpp
		hudpaused.cpp
		hudpopup.cpp
		hudradar.cpp
		hudscores.cpp
		hudsubtitles.cpp
		hudtransmission.cpp
		intelitemlist.cpp
		interfacemgr.cpp
		interfaceresmgr.cpp
		interfacesurfmgr.cpp
		interfacetimer.cpp
		ipmgr.cpp
		jumpvolumefx.cpp
		laserbeam.cpp
		lasertriggerfx.cpp
		layoutmgr.cpp
		leanmgr.cpp
		lensflarefx.cpp
		lightfx.cpp
		lightgroupfx.cpp
		lightningfx.cpp
		lightscalemgr.cpp
		linesystemfx.cpp
		loadingscreen.cpp
		marksfx.cpp
		menuintel.cpp
		menuinventory.cpp
		menukeys.cpp
		menumgr.cpp
		menumission.cpp
		menuplayer.cpp
		menusystem.cpp
		messagebox.cpp
		minefx.cpp
		missionmgr.cpp
		music.cpp
		muzzleflashfx.cpp
		muzzleflashparticlefx.cpp
		nodecontroller.cpp
		nodelinesfx.cpp
		objectivecontrol.cpp
		objspritefx.cpp
		particleexplosionfx.cpp
		particleshowerfx.cpp
		particlesystemfx.cpp
		particletrailfx.cpp
		particletrailsegmentfx.cpp
		performancemgr.cpp
		performancetest.cpp
		pickupitemfx.cpp
		playercamera.cpp
		playerlurefx.cpp
		playermgr.cpp
		playersoundfx.cpp
		playerstats.cpp
		playervehiclefx.cpp
		playerviewattachmentmgr.cpp
		polydebrisfx.cpp
		polygridfx.cpp
		polylinefx.cpp
		popupmgr.cpp
		popuptext.cpp
		profilemgr.cpp
		projectilefx.cpp
		pvfxmgr.cpp
		radarobjectfx.cpp
		ragdoll.cpp
		ragdollconstraint.cpp
		randomsparksfx.cpp
		scatterfx.cpp
		scmdconsoledriver_cshell.cpp
		screenmgr.cpp
		screenpostload.cpp
		screenpreload.cpp
		screenspritemgr.cpp
		screentintmgr.cpp
		searcher.cpp
		searchlightfx.cpp
		sfxmgr.cpp
		shellcasingfx.cpp
		skillcontrol.cpp
		smokefx.cpp
		snowfx.cpp
		soundfx.cpp
		sparam.cpp
		specialfxlist.cpp
		sprinklesfx.cpp
		stdafx.cpp
		steamfx.cpp
		targetmgr.cpp
		texturefxmgr.cpp
		timedtext.cpp
		tracerfx.cpp
		transitionfxmgr.cpp
		triggerfx.cpp
		vehiclemgr.cpp
		visionmodemgr.cpp
		vkdefs.cpp
		weaponchooser.cpp
		weaponfx.cpp
		weatherfx.cpp
)
